# pippin

./: .env.sample  .replit  README.md  main.py  memory.db  pyproject.toml  replit.nix
activities/: analyze_x_trends.py  create_new_activity.py  draw.py  fetch_recent_stories.py  magic _stardust _creation.py  magic_stardust_creation.py  memory_summary.py  nap.py  play.py  post_a_tweet.py  post_a_tweet_with_image.py  read_twitter_mentions.py  storytelling.py  take_a_walk.py  template_activity.py
config/: settings.yaml
framework/: activity_constraints.py  activity_decorator.py  activity_loader.py  activity_selector.py  integration_endpoints.py  main.py  memory.py  server.py  shared_data.py  state.py
skills/: draw.py  generate_pippin_image.py  gif.py
static/: logs.css  logs.js  script.js  style.css
templates/: index.html  logs.html
